--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,1 +1,33 @@
-/* No CSS *//*# sourceMappingURL=app.css.map */
+.header {
+  width: 100%;
+}
+
+.header-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.icon {
+  height: 47px;
+}
+
+.icons {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.App {
+  height: 100vh;
+}
+/*# sourceMappingURL=app.css.map */
