single item styling

--- a/client/src/styles/partials/_singleItem.scss
+++ b/client/src/styles/partials/_singleItem.scss
@@ -4,10 +4,19 @@
   justify-content: space-evenly;
 }
 
-.product-image {
-  width: 20%;
+input {
+  width: 40px;
+  height: 34px;
 }
 
-input {
-  width: 20px;
+.image {
+  width: 30px;
+}
+
+.name {
+  width: 172px;
+}
+
+.single-item {
+  margin-top: 20px;
 }
