--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -44,12 +44,21 @@
           justify-content: space-evenly;
 }
 
-.product-image {
-  width: 20%;
+input {
+  width: 40px;
+  height: 34px;
 }
 
-input {
-  width: 20px;
+.image {
+  width: 30px;
+}
+
+.name {
+  width: 172px;
+}
+
+.single-item {
+  margin-top: 20px;
 }
 
 .favoritesHeader {
